# OpenMP_Cores_Efficiency

./: CMakeLists.txt  README.md  main  main.cpp  plot_speedup.py  timing_results.csv
